# mix-teacher-ai

./: .gitignore  CMakeLists.txt  README.md  tz_algoritm.md  vsttz.md
Source/: Analysis.cpp  Analysis.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: build_macos.sh  build_vs_insiders.bat
